<resources>
    <string name="app_name">CoffeePointsAppCourier</string>
    <string name="owner_tv_text">Ваш Куратор</string>
    <string name="product_list_tv_text">Ваш Ассортимент</string>
    <string name="save_btn">Сохранить</string>
    <string name="hint_edit_tv_text">Добавить Хинт</string>
    <string name="hint_ed_text">Хинт</string>
    <string name="tracker_tv_text">Активность</string>
    <string name="visible_tv_text">Показывать меня на карте</string>
    <string name="status_true">Активен</string>
    <string name="status_false">Неактивен</string>
    <string name="exit_tv">Выйти</string>
    <string name="unset_owner_dialog_title">Открепться?</string>
    <string name="unset_owner_dialog_message">Вы уверены, что хотите открепиться от данного куратора?</string>
    <string name="logout_dialog_title">Выйти?</string>
    <string name="logout_dialog_message">Вы уверены, что хотите выйти из приложения?</string>
    <string name="dialog_positive_btn">Да</string>
    <string name="dialog_negative_btn">Нет</string>
    <string name="unset_owner_btn_text">Открепиться</string>
    <string name="title_log_in">Вход</string>
    <string name="auth_instruction_tv_num_text">Введите Ваш номер телефона, на который мы отправим код подтверждения</string>
    <string name="auth_instruction_tv_code_text">Введите код, который мы отправили на номер:</string>
    <string name="phone_number_ed_text">Номер телефона</string>
    <string name="sms_code_ed_text">Код из смс</string>
    <string name="request_code_btn_text">Далее</string>
    <string name="log_in_btn">Войти</string>
    <string name="status_error_text">Функционал приложения недоступен, так как Вы не привязаны ни к какому куратору. Обратитесь к своему руководству.</string>
    <string name="authorization_header">Authorization</string>
    <string name="network_error_toast">Сетевая Ошибка</string>
    <string name="location_service_title">Вы на смене</string>
    <string name="location_service_text">Отправка геоданных включена</string>
</resources>
